About section created and styled

--- a/style.css
+++ b/style.css
@@ -100,3 +100,29 @@
     margin: 40px 0px;
 }
 /* ABOUT SECTION */
+#about{
+    background-color: rgb(26, 25, 25);
+    color: white;
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+    padding: 20px;
+    margin-bottom: 50px;
+}
+#pic{
+    display: flex;
+}
+#pic img{
+    width: 575px;
+    height: 400px;
+}
+#intro{
+    display: flex;
+    flex-direction: column;
+    text-align: justify;
+    padding: 10px;
+}
+#intro  h2{
+    font-size: 2rem;
+    margin-bottom: 20px;
+}
