--- a/style.css
+++ b/style.css
@@ -57,7 +57,6 @@
     border-radius: 9px;
     min-height:40px; 
     min-width: 120px;
-
     transition: .6s ease;
 }
 #home button:hover{
@@ -65,7 +64,7 @@
     background-color:pink;
     transition: 0.7s;
     box-shadow: 0  0  5px  white,  0  0  10px white, 0 0  15px white;
-    font-weight: bold; ;
+    font-weight: bold;
 }
 
 #home  button:active{
@@ -150,6 +149,8 @@
 }
 /* Service section */
 #services{
+    background-color: rgba(0, 0, 0,0.9);
+    color: white;
     display: flex;
     flex-direction: column;
     padding: 20px;
@@ -165,6 +166,7 @@
     flex-direction: column;
     width: 350px;
     height: 450px;
+    color: black;
     border: 1px solid black;
     margin: 10px;
     align-items: center;
@@ -189,3 +191,52 @@
 }
 /* find icons related to what is in the image element */
 /* CONTACT SECTION*/
+#contact{
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+    background-color: rgba(0, 0, 0,0.9);
+    color: white;
+    padding: 20px;
+}
+.form{
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+    align-items: center;
+    margin: 20px 0;
+}
+.input{
+    padding: 12px;
+    margin: 15px;
+    width: 40%;
+    border: none;
+    outline: none;
+}
+#msg{
+    width: 40%;
+    padding: 10px;
+    margin: 15px;
+    border: none;
+    outline: none;
+}
+#send{
+    padding: 11px;
+    width: 10%;
+    margin: 40px;
+    border: none;
+    outline: none;
+    color: black;
+    border-radius: 9px;
+    min-height:40px; 
+    min-width: 90px;
+    transition: .6s ease;
+}
+#send:hover{
+    cursor: pointer;
+    background-color:pink;
+    transition: 0.7s;
+    box-shadow: 0  0  5px  white,  0  0  10px white, 0 0  15px white;
+    font-weight: bold;
+
+}
